--- a/src/v-shading/fragment.html
+++ b/src/v-shading/fragment.html
@@ -4,7 +4,7 @@
         :real-max-x="!isNaN(leftRealMaxX) ? leftRealMaxX : realMaxX"
         :real-min-y="realMinY" :real-max-y="realMaxY"
         :x-transform="xTransform" :y-transform="yTransform"
-        symbol-color="0xFF0000"
+        symbol-color="0x000000"
         :view-height="viewHeight" :view-width="viewWidth"
         :real-path="realLeft" :line-width="3" 
         :line-transparency="0.3" 
@@ -17,7 +17,7 @@
         symbol-color="0x000000"
         :view-height="viewHeight" :view-width="viewWidth"
         :real-path="realRight" :line-width="3" 
-        :line-transparency="0.3"
+        :line-transparency="0.3" :wrap-mode="wrapMode"
         :shading-offset-x="1" :shading-offset-y="-2">
     </v-path>
 </fragment>
