--- a/src/v-track/fragment.html
+++ b/src/v-track/fragment.html
@@ -117,16 +117,17 @@
     <v-viewport :view-pos-x="0" :view-pos-y="trackHeaderHeight"
         ref="viewportBody" :clipped="true"
         :viewport-scroll="onViewportScroll"
-        :view-width="viewWidth" :view-height="scaleTrackHeight"
+        :view-width="viewWidth" :view-height="trackViewportBodyHeight"
         :viewport-width="viewWidth" :viewport-height="viewHeight - trackHeaderHeight"
         x-transform="none" :y-transform="yTransform"
+        :on-zoom="onViewportZoom"
         line-color="0x000000" :line-width="1"
         :real-min-y="realMinY" :real-max-y="realMaxY">
         <v-axis-ext-mouse
             v-if="trackType === 'Depth Track'"
             clipped="true" axis="y" 
             ref="axis" :name="name + trackId" 
-            :view-width="viewWidth" :view-height="scaleTrackHeight" 
+            :view-width="viewWidth" :view-height="trackViewportBodyHeight" 
             :real-min-y="realMinY" :real-max-y="realMaxY" 
             :y-transform="yTransform" x-transform="none"
             :grid="false" :on-ext-mouse-pos="genTooltip"
@@ -142,7 +143,7 @@
             v-if="trackType === 'Zone Track'"
             ref="trackChildren" :name="name + trackId" 
             :on-mounted-fn="onRefsReady"
-            :view-width="viewWidth" :view-height="scaleTrackHeight"
+            :view-width="viewWidth" :view-height="trackViewportBodyHeight"
             x-transform="none" :y-transform="yTransform"
             :real-min-y="realMinY" :real-max-y="realMaxY"
             :fill-color="checkSelected ? '0xF0F000' : '0xFFFFFF'"
@@ -157,7 +158,7 @@
             :view-pos-x="0" :view-pos-y="0"
             :name="name + trackId" 
             :grid-x="showValueGrid" :grid-y="showDepthGrid"
-            :view-width="viewWidth" :view-height="scaleTrackHeight"
+            :view-width="viewWidth" :view-height="trackViewportBodyHeight"
             :real-min-y="realMinY" :real-max-y="realMaxY"
             :real-min-x="0" :real-max-x="viewWidth"
             :fill-color="checkSelected ? '0xF0F000' : '0xFFFFFF'"
@@ -165,14 +166,14 @@
             :enabled="true" cursor="crosshair"
             x-transform="linear" :y-transform="yTransform"
             line-color="0x000000" :line-width="1"
-            :major-ticks-y="showDepthGrid && Math.floor(scaleTrackHeight  / 150)" :minor-ticks-y="showDepthGrid && 5"
+            :major-ticks-y="showDepthGrid && Math.floor(trackViewportBodyHeight  / 150)" :minor-ticks-y="showDepthGrid && 5"
             :major-ticks-x="showValueGrid && (majorTicks || 1)" :minor-ticks-x="showValueGrid && (minorTicks || 5)"
             :onmousedown="onTrackMouseDown"
             :on-ext-mouse-pos="genTooltip">
             <v-rect-with-mounted-event :view-pos-x="0" :view-pos-y="0"
                 ref="trackChildren"
                 :on-mounted-fn="onRefsReady"
-                :view-width="viewWidth" :view-height="scaleTrackHeight"
+                :view-width="viewWidth" :view-height="trackViewportBodyHeight"
                 x-transform="none" y-transform="none"
                 fill-color="0xFFFFFF" :fill-transparency="0.001">
                 <slot />
