add multiple event manager

--- a/src/v-plot/fragment.html
+++ b/src/v-plot/fragment.html
@@ -40,7 +40,6 @@
                 @trackTitleDragging="onTrackTitleDragging" @trackScroll="onTrackScroll"
                 @trackMouseDown="onTrackMouseDown" @trackTitleDragEnd="onTrackTitleDragEnd"
                 :on-plot-zoom="onPlotZoom" :track-viewport-body-height="trackBodyScale"
-                :plot-signal="cPlotSignal"
                 />
             <v-track
                 v-if="!isNaN(track.idZoneTrack)"
@@ -61,8 +60,7 @@
                 :enabled="true" :is-selected="selectedIdTrack === track.idZoneTrack"
                 @trackTitleDragging="onTrackTitleDragging" @trackScroll="onTrackScroll"
                 @trackMouseDown="onTrackMouseDown" @trackTitleDragEnd="onTrackTitleDragEnd"
-                :on-plot-zoom="onPlotZoom" :track-viewport-body-height="trackBodyScale"
-                :plot-signal="cPlotSignal">
+                :on-plot-zoom="onPlotZoom" :track-viewport-body-height="trackBodyScale">
                 <v-xone
                     v-for="(zone, i) in sortedTracks[idx]['zone_set']['zones']"
                     :key="'zone' + i + track.idZoneTrack"
@@ -100,8 +98,7 @@
                 :enabled="true" :is-selected="selectedIdTrack === track.idTrack"
                 @trackTitleDragging="onTrackTitleDragging" @trackScroll="onTrackScroll"
                 @trackMouseDown="onTrackMouseDown" @trackTitleDragEnd="onTrackTitleDragEnd"
-                :on-plot-zoom="onPlotZoom" :track-viewport-body-height="trackBodyScale"
-                :plot-signal="cPlotSignal">
+                :on-plot-zoom="onPlotZoom" :track-viewport-body-height="trackBodyScale">
                 <fragment
                     v-for="(shading, idx) in track.shadings"
                     :key="shading.name + shading.idControlCurve + shading.idShading">
