--- a/src/v-plot/fragment.html
+++ b/src/v-plot/fragment.html
@@ -37,10 +37,10 @@
                 x-transform="none" y-transform="linear"
                 :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
                 cursor="crosshair" :enabled="true" :is-selected="selectedIdTrack === track.idDepthAxis"
-                @trackTitleDragging="onTrackTitleDragging" @trackScroll="onTrackScroll"
-                @trackMouseDown="onTrackMouseDown" @trackTitleDragEnd="onTrackTitleDragEnd"
+                @trackMouseDown="onTrackMouseDown"
                 :on-plot-zoom="onPlotZoom" :track-viewport-body-height="trackBodyScale"
                 />
+            <!-- @trackTitleDragging="onTrackTitleDragging" @trackScroll="onTrackScroll" @trackTitleDragEnd="onTrackTitleDragEnd"-->
             <v-track
                 v-if="!isNaN(track.idZoneTrack) && track['zone_set'] !== null"
                 track-type='Zone Track' :grid="false"
@@ -58,9 +58,9 @@
                 x-transform="none" y-transform="linear"
                 :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
                 :enabled="true" :is-selected="selectedIdTrack === track.idZoneTrack"
-                @trackTitleDragging="onTrackTitleDragging" @trackScroll="onTrackScroll"
-                @trackMouseDown="onTrackMouseDown" @trackTitleDragEnd="onTrackTitleDragEnd"
+                @trackMouseDown="onTrackMouseDown"
                 :on-plot-zoom="onPlotZoom" :track-viewport-body-height="trackBodyScale">
+                <!-- @trackTitleDragging="onTrackTitleDragging" @trackScroll="onTrackScroll" @trackTitleDragEnd="onTrackTitleDragEnd"-->
                 <v-xone
                     v-for="(zone, i) in sortedTracks[idx]['zone_set']['zones']"
                     :key="'zone' + i + track.idZoneTrack"
@@ -96,9 +96,9 @@
                 :major-ticks="track.majorTicks" :minor-ticks="track.minorTicks"
                 :show-depth-grid="track.showDepthGrid" :show-value-grid="track.showValueGrid"
                 :enabled="true" :is-selected="selectedIdTrack === track.idTrack"
-                @trackTitleDragging="onTrackTitleDragging" @trackScroll="onTrackScroll"
-                @trackMouseDown="onTrackMouseDown" @trackTitleDragEnd="onTrackTitleDragEnd"
+                @trackMouseDown="onTrackMouseDown"
                 :on-plot-zoom="onPlotZoom" :track-viewport-body-height="trackBodyScale">
+                <!-- @trackTitleDragging="onTrackTitleDragging" @trackScroll="onTrackScroll" @trackTitleDragEnd="onTrackTitleDragEnd"-->
                 <fragment
                     v-for="(shading, idx) in track.shadings"
                     :key="shading.name + shading.idControlCurve + shading.idShading">
