--- a/src/v-xone/template.html
+++ b/src/v-xone/template.html
@@ -7,6 +7,7 @@
             :view-pos-y="textPosY"
             :rotation="labelRotation"
         />
+        ${require('../v-xone/fragment.html')}
     </div>
     <fragment v-if="!debug">
         <v-text-box
@@ -15,5 +16,6 @@
             :view-pos-y="textPosY"
             :rotation="labelRotation"
             />
+        ${require('../v-xone/fragment.html')}
     </fragment>
 </fragment>
