--- a/src/v-track/fragment.html
+++ b/src/v-track/fragment.html
@@ -41,6 +41,9 @@
                     :enabled="true" :constrained="true"
                     :view-width="viewWidth" :view-height="child.componentType === 'VCurve' ? 60: 30"
                     :fill-color="child.componentType !== 'VZone' ? '0xFFFFFF' : child.fillColor" 
+                    :image-pattern-url="child.imagePatternUrl"
+                    :foreground-color="child.foregroundColor"
+                    :background-color="child.backgroundColor"
                     x-transform="none" y-transform="none"
                     :fill-transparency="child.componentType !== 'VZone' ? 0 : 1"
                     line-color="0x080808" :line-width="1"
